# myrtle

./: .dockerignore  .gitignore  Dockerfile  README.md  convert_tf_light.py  data_processing.py  data_retrieval.py  deploy.py  docker-compose.yml  exploration.ipynb  fly.toml  pyproject.toml  terraform.tfstate  train.py
data/processed/: processed_quotes.csv
myrtle/: dino.py  generate.py  helpers.py  main.py  pipelines.py  training.py
tests/: test_df_filter.py  test_pipelines.py  test_process_dataset.py
